--- a/set-cover.ipynb
+++ b/set-cover.ipynb
@@ -170,7 +170,6 @@
     "                        max_num[x]=sum\n",
     "                        index[x]=i\n",
     "                        break  \n",
-    "    val = 0\n",
     "    for n in range(100):\n",
     "        if index[n]!=-1:\n",
     "            prova = solution.copy()\n",
@@ -181,7 +180,7 @@
     "                repetitions -= SETS_ONE[index[n]]\n",
     "    if index[0]!=-1:\n",
     "        history.append(cost(solution))\n",
-    "        ic(steps, val, solution.sum(),  cost(solution))\n",
+    "        ic(steps, cost(solution))\n",
     "        improve2(solution, repetitions, steps)\n",
     "    return\n",
     "\n",
